<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">&appname;</string>
    <string name="facebook_app_id">1674519595980409</string>
    <string name="fb_login_protocol_scheme">fb1674519595980403</string>
    <string name="google_api_key_places">AIzaSyBYwnbxkkvB9BFMTviY8NxGkvibfyXs8d0</string>
    <string name="admob_appid">ca-app-pub-9199908208295488~2197642172</string>
    <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="string_38">Already downloading!!</string>
    <string name="string_211">PERMISSION DENIED</string>
    <string name="string_393">Download Confirmation</string>
    <string name="string_506">Download </string>
    <string name="string_534"> size image?</string>
    <string name="string_537"> size document?</string>
    <string name="more_message">more new messages</string>
    <string name="string_580">OK</string>
    <string name="string_591">CANCEL</string>
    <string name="string_578">CONTINUE</string>
    <string name="string_535">size video?</string>
    <string name="string_39">Download failed!!</string>
    <string name="string_40">File not found!!</string>
    <string name="string_41">Download canceled!!</string>
    <string name="string_4">Syncing</string>
    <string name="string_280">Image</string>
    <string name="string_281">Video</string>
    <string name="string_498">Document downloaded!!</string>
    <string name="string_42">Image downloaded!!</string>
    <string name="string_43">Video downloaded!!</string>
    <string name="string_47">Doodle downloaded!!</string>
    <string name="NoImage">No image selected!!</string>
    <string name="NoDocument">No document selected!!</string>
    <string name="string_45">Allow external storage access to download %s</string>
    <string name="string_644">Gallery</string>
    <string name="Document">Document</string>
    <string name="album">Album</string>
    <string name="file">File</string>
    <string name="star_packet">Star Packet</string>
    <string name="transfer">Transfer</string>
    <string name="string_982">Grant external storage permission required to save captured video!!</string>
    <string name="string_67">Allow gallery access!!</string>
    <string name="string_981">Grant external storage permission required to save captured image!!</string>
    <string name="string_57">Access external storage permission denied!!</string>
    <string name="string_68">Record audio permission denied!!</string>
    <string name="string_61">Camera not found!!</string>
    <string name="string_764">Video can\'t be selected,Try another video!!</string>
    <string name="string_674">Video can\'t be forwarded,Try another video!!</string>
    <string name="string_52">Can\'t send video greater than </string>
    <string name="string_51">Error sending video,Try again!!</string>
    <string name="string_49">Error sending image,Try again!!</string>
    <string name="string_492">Error sending doodle,Try again!!</string>
    <string name="string_511">Error forwarding video,Try again!!</string>
    <string name="string_491">Error forwarding image,Try again!!</string>
    <string name="string_50">Image can\'t be sent,try capturing again!!</string>
    <string name="string_48">Image can\'t be selected,try different image!!</string>
    <string name="string_481">Doodle can\'t be forwarded,try different doodle!!</string>
    <string name="string_482">Image can\'t be forwarded,try different image!!</string>
    <string name="string_56"> Mb!!</string>
    <string name="string_207">Today</string>
    <string name="string_208">Yesterday</string>
    <string name="string_639">Chats</string>
    <string name="string_948">No chat with</string>
    <string name="string_55">Try downloading!!</string>
    <string name="string_65">Allow camera access!!</string>
    <string name="string_62">Access camera permission denied!!</string>
    <string name="string_246">No Number</string>
    <string name="string_247">Unknown</string>
    <string name="string_44">Audio downloaded!!</string>
    <string name="string_646">Audio</string>
    <string name="string_647">Location</string>
    <string name="string_648">Contact</string>
    <string name="string_607">Audio Received</string>
    <string name="string_608">Audio Not Found</string>
    <string name="string_610">Document Not Found</string>
    <string name="string_609">Audio Sent</string>
    <string name="string_538">size audio?</string>
    <string name="string_245">No chats to show</string>
    <string name="string_725">items</string>
    <string name="video_nf">Video Not Found</string>
    <string name="string_285">No media sent yet</string>
    <string name="image_nf">Image Not Found</string>
    <string name="doodle_nf">Doodle Not Found</string>
    <string name="gifSmall">Gifs</string>
    <string name="stickers">STICKERS</string>
    <string name="newSecretChat">New Secret Chat</string>
    <string name="string_284">Media sent</string>
    <string name="string_1004">Video not downloaded yet!!</string>
    <string name="string_282">No media yet</string>
    <string name="string_204"> AND </string>
    <string name="string_283">Media received</string>
    <string name="string_1005">Video not found!!</string>
    <string name="string_805">SENT</string>
    <string name="string_806">RECEIVED</string>
    <string name="string_1006">Access storage permission denied!!</string>
    <string name="string_279">MEDIA HISTORY</string>
    <string name="string_637">Media History</string>
    <string name="string_638">Delete Chat</string>
    <string name="string_640">Clear Chat</string>
    <string name="string_691">Enable Last Seen</string>
    <string name="string_692">Disable Last Seen</string>
    <string name="string_369">Delete Confirmation</string>
    <string name="string_584">YES</string>
    <string name="string_558">Delete chat with</string>
    <string name="string_593">NO</string>
    <string name="string_346">Name: </string>
    <string name="string_347">Address: </string>
    <string name="string_348">LatLng: </string>
    <string name="string_395">Location Shared</string>
    <string name="string_581">OPEN MAP</string>
    <string name="string_34">No app installed to show location!!</string>
    <string name="string_600">Failed to select location,Try Again!!</string>
    <string name="string_53">Error sending audio,Try again!!</string>
    <string name="string_531">Error forwarding audio,Try again!!</string>
    <string name="string_79">Mic not found!!</string>
    <string name="string_54">Can\'t send audio greater than </string>
    <string name="string_766">Audio can\'t be selected,Try another audio!!</string>
    <string name="string_667">Audio can\'t be forwarded,Try another audio!!</string>
    <string name="string_768">Audio can\'t be recorded,Try another audio!!</string>
    <string name="string_75">Allow record audio permission!!</string>
    <string name="string_64">Allow location access!!</string>
    <string name="string_58">Enable location services!!</string>
    <string name="string_803">&appname; File Uploading</string>
    <string name="string_337">Online</string>
    <string name="string_484">Loading...</string>
    <string name="string_60">Access contacts permission denied!!</string>
    <string name="string_59">Access location permission denied!!</string>
    <string name="string_767">Contact can\'t be selected,Try another contact!!</string>
    <string name="string_911">Location Settings</string>
    <string name="string_912">Location services isn\'t enabled</string>
    <string name="string_590">ENABLE</string>
    <string name="string_66">Allow contacts access!!</string>
    <string name="string_63">Upload failed!!</string>
    <string name="string_11"> deleted successfully!!</string>
    <string name="string_485">Deleting a message is irreversible?</string>
    <string name="string_801">Message</string>
    <string name="string_46">Type something to send!!</string>
    <string name="string_336">Connecting...</string>
    <string name="string_753">Write a message...</string>
    <string name="string_755">Offline</string>
    <string name="string_800">Type something...</string>
    <string name="text_9000">9000</string>
    <string name="app_name_call">&appname; Call</string>
    <string name="connecting">CONNECTING</string>
    <string name="ringing">RINGING</string>
    <string name="pref_startvideobitrate_key">startvideobitrate_preference</string>
    <string name="pref_startvideobitrate_title">Start video bitrate setting.</string>
    <string name="pref_startvideobitrate_dlg">Start video bitrate setting.</string>
    <string name="pref_startvideobitrate_default">Default</string>
    <string name="pref_startvideobitratevalue_key">startvideobitratevalue_preference</string>
    <string name="pref_startvideobitratevalue_title">Video encoder start bitrate.</string>
    <string name="Continue">CONTINUE</string>
    <string name="Settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="agreeAndContinue">Agree &amp; Continue </string>
    <string name="Email">Email</string>
    <string name="error_title">Oops</string>
    <string name="error_message">There was a problem loading the data</string>
    <string name="reload">Reload</string>
    <string name="block_message">You have been blocked , for further details contact the admin at &appname;appscrip@gmail.com</string>
    <string name="tv_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="name">Name</string>
    <string name="signout">Sign out</string>
    <string name="oops_wrong">Oops something went wrong</string>
    <string name="find_contact_follow">Find Contact to Follow</string>
    <string name="contact_where_upload_text">To help you connect with friends, allow &appname;
        access to your contacts</string>
    <string name="find_more_info">Learn more about Privacy Policy</string>
    <string name="manage_setting_text">You can manage what information we use in the app under your phones settings</string>
    <string name="contact_upload_permission_text">&appname; is excited to continue to connect with friends to chat, call and share social moments.</string>
    <string name="not_now">Not now</string>
    <string name="read_policy">Read our Privacy Policy. Tap \"Agree and continue\" to accept the Terms of Services.</string>
    <string name="kyc_not_verified">Pending KYC verification</string>
    <string name="kyc_not_verified_message">KYC Application submitted and pending review, we will let you know the status of your KYC via email and notification</string>
    <string name="okay">Okay!</string>
    <string name="user_details_caps">USER DETAILS-</string>
    <string name="test_user">Test user</string>
    <string name="test_gmail">test@gmail.com</string>
    <string name="random_no">#1234567890123</string>
    <string name="tv_amount">$ 20.00</string>
    <string name="tv_transaction_date">16 Nov 19, 13:17:22</string>
    <string name="first_coin_init">Coin 1.00</string>
    <string name="temp_transaction_id">TXN ID: SCT_AJ38248S </string>
    <string name="reposted_start_post">Reposted star post</string>
    <string name="tv_time">Fri, 14 feb 2017 02:21 AM</string>
    <string name="menuSavedPost">Saved Post</string>
    <string name="menuActivity">Activity</string>
    <string name="menuHistory">Order History</string>
    <string name="menuWallet">Wallet</string>
    <string name="menuCard">Debit/Credit Card</string>
    <string name="menuAddress">Manage Addresses</string>
    <string name="menuWishList">Wishlist</string>
    <string name="menuHelpCenter">Help Center</string>
    <string name="menufaq">FAQs</string>
    <string name="Coins_text">Coins</string>
    <string name="welcome_to">Welcome to</string>
</resources>