<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/default_images_size"
        android:layout_height="@dimen/default_images_size"
        android:layout_marginTop="@dimen/dp_26"
        app:srcCompat="@drawable/ic_nonetworkpx" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:gravity="center_horizontal"
        android:text="@string/error_title"
        android:textSize="@dimen/sp_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:gravity="center_horizontal"
        android:padding="@dimen/dp_16"
        android:text="@string/error_message"
        android:textSize="@dimen/medium" />

    <Button
        android:id="@+id/button_reload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/twenty_dp"
        android:background="@drawable/follow_all_btn_selector"
        android:text="@string/reload"
        android:textAllCaps="false"
        android:textColor="@color/color_white"
        android:textSize="@dimen/medium" />

</merge>