<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/ten_dp">

    <ImageView
        android:id="@+id/iV_default_icon"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/twenty_dp"
        android:src="@drawable/empty_user" />

    <LinearLayout
        android:id="@+id/rl_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iV_default_icon"
        android:layout_marginTop="@dimen/twenty_dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/find_contact_follow"
            android:textSize="@dimen/sp_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/contact_upload_permission_text"
            android:textSize="@dimen/subheading_text_size" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/rl_text_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_text"
        android:layout_marginTop="@dimen/ten_dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/contact_where_upload_text"
            android:textSize="@dimen/subheading_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:gravity="center_horizontal"
            android:text="@string/manage_setting_text"
            android:textSize="@dimen/subheading_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:editable="false"
                android:text="@string/find_more_info"
                android:textSize="@dimen/subheading_text_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_text_next"
        android:layout_marginTop="@dimen/ten_dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <RelativeLayout
            android:id="@+id/rL_skip"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tV_skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/eight_dp"
                android:background="@color/gray"
                android:gravity="center"
                android:padding="@dimen/ten_dp"
                android:text="@string/not_now"
                android:textColor="@color/star_black"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rL_allow"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tV_accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/eight_dp"
                android:background="@color/base_color"
                android:gravity="center"
                android:padding="@dimen/ten_dp"
                android:text="@string/Continue"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>