<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_80"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_10"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle_small" />

        <View
            android:layout_width="@dimen/dp_3"
            android:layout_height="match_parent"
            android:background="#D3E2EF" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTransactionId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/llMark"
        android:text="@string/random_no"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_10" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTransactionId"
        android:layout_marginTop="@dimen/dp_3"
        android:maxLines="3"
        android:layout_toEndOf="@+id/llMark"
        android:text="@string/tv_desc"
        android:textColor="@color/star_black"
        android:textSize="@dimen/small" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_toEndOf="@+id/llMark"
        android:text="@string/tv_amount"
        android:layout_marginBottom="@dimen/dp_10"
        android:textColor="@color/color_black"
        android:textSize="@dimen/medium" />

    <TextView
        android:id="@+id/tvTransactionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_alignParentBottom="true"
        android:text="@string/tv_transaction_date"
        android:textColor="@color/gray"
        android:layout_marginBottom="@dimen/dp_10"
        android:textSize="@dimen/tiny" />

</RelativeLayout>