<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_100"
        android:src="@drawable/ic_validate" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/kyc_not_verified"
        android:textColor="@color/color_black"
        android:textSize="@dimen/big" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_40"
        android:gravity="center"
        android:text="@string/kyc_not_verified_message"
        android:textColor="@color/gray1"
        android:textSize="@dimen/medium" />


    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_30"
        android:background="@drawable/colored_curved_background"
        android:text="@string/okay"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>