<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_margin="@dimen/dp_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_medium"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="@string/welcome_to"
            android:textColor="@color/color_black"
            android:textSize="@dimen/very_big" />

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:src="@drawable/app_logo_black" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:src="@drawable/welcome_placeholder" />

    <TextView
        android:id="@+id/tvUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/read_policy"
        android:textColor="@color/star_black" />

    <Button
        android:id="@+id/btnAgree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:layout_gravity="bottom"
        android:background="@color/base_color"
        android:text="@string/agreeAndContinue"
        android:textColor="@color/color_white" />


</LinearLayout>